apps/core/hashicorp/consul/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul
  namespace: hashicorp
spec:
  ingressClassName: nginx
  rules:
  - host: consul.${INTERNAL_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: consul-consul-ui
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - consul.${INTERNAL_DOMAIN}
  - secretName: consul-tls-internal
